[gd_scene load_steps=2 format=2]

[ext_resource path="res://roaming_pov/ClickToEnter.gd" type="Script" id=1]

[node name="ClickToEnter" type="Area2D"]
script = ExtResource( 1 )

[connection signal="input_event" from="." to="." method="_on_ClickToEnter_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_ClickToEnter_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ClickToEnter_mouse_exited"]
